--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
 /* General styling */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@font-face {
+    font-family: 'dream avenue';
+    src: url('media/FontsFree-Net-Dream-Avenue.ttf');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +13,7 @@
 
 body {
     font-family: "Poppins", sans-serif ;
+    background-color: #FAF9F6;
 }
 
 html {
@@ -16,7 +22,31 @@ html {
 
 p {
     color: #1F3847;
+    font-size: 0.85rem;
 }
+
+h2 {
+        color: #AC5DA9;
+        font-size: 1rem;
+        text-align: left;    
+}
+
+h3 {
+    font-size: 1rem;
+    text-align: left;  
+}
+em {
+    font-weight: 500;
+}
+.heading {
+    color: #AC5DA9;
+    font-family: 'dream avenue';
+    font-size: 2.5rem;
+    padding-bottom: 2rem;
+    font-style: italic;
+    text-align: center;    
+}
+
 
 /* link transition */
 
@@ -25,7 +55,319 @@ a, .button {
 }
 
 /* desktop navigation */
-
 nav, .nav-links {
     display: flex
+}
+
+nav {
+    justify-content: space-around;
+    align-items: center;
+    height: 15vh;
+}
+
+.nav-links{
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.5rem;
+}
+
+a {
+    color: #00243D;
+    text-decoration: none;
+    text-decoration-color: #FAF9F6;
+}
+
+a:hover {
+    color: #005FA3;
+    text-decoration: underline;
+    text-underline-offset: 0.5rem;;
+
+}
+
+.logo {
+    font-size: 2.5rem;
+    color: #00243D;
+}
+
+.logo:hover {
+    cursor: default;
+}
+
+
+/* mobile menu */
+#mobile-nav {
+    display: none;
+}
+
+.mobile-menu {
+    position: relative;
+    display: inline-block;
+}
+
+.mobile-menu-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
+}
+
+.mobile-menu-icon span {
+    width:100%;
+    height: 2px;
+    background-color: #00243D;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: #FAF9F6;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links a {
+    display: block;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: #00243D;
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+    list-style: none;
+}
+
+.menu-links.open {
+    max-height: 300px;
+    
+}
+
+.mobile-menu-icon.open span:first-child {
+    transform: rotate(45deg) translate(10px, 5px);
+}
+
+.mobile-menu-icon.open span:nth-child(2) {
+    opacity: 0;
+}
+.mobile-menu-icon.open span:last-child {
+    transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.mobile-menu-icon span:first-child {
+    transform: none;
+}
+
+.mobile-menu-icon span:nth-child(2) {
+    opacity: 1;
+}
+.mobile-menu-icon span:last-child {
+    transform: none;
+}
+
+/* sections */
+section {
+    padding-top: 5vh;
+    height: 95vh;
+    margin: 0 10rem;
+    box-sizing: border-box;
+    min-height: fit-content;
+}
+
+
+
+/* hero section */
+.hero-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width:100%;
+}
+
+#hero {
+    display: flex;
+    gap: 5rem;
+    height: 80vh;
+}
+
+.hero-pic-container {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    height: 400px;
+    width: 400px;
+    margin: auto 2rem;
+}
+
+.hero-text {
+    align-self: center;
+    text-align: left;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: flex-start;
+    width: 50%;
+}
+
+.hero-text-p {
+   font-size: 1.25rem;
+   font-weight: 300;
+   padding: 10px 0 30px 0;
+   
+}
+
+.highlighter {
+    position:relative;
+
+}
+
+.highlighter:before{
+    content:"";
+    z-index:-1;
+    left:-0.5em;
+    top:-0.1em;
+    border-width:2px;
+    border-style:solid;
+    border-color: #AC5DA9;
+    position:absolute;
+    border-right-color:transparent;
+    width:100%;
+    height:1em;
+    transform:rotate(2deg);
+    opacity:0.5;
+    border-radius:50%;
+    padding:0.1em 0.25em;
+
+}
+
+.highlighter:after{
+    content:"";
+    z-index:-1;
+    left:-0.5em;
+    top:0.1em;
+    padding:0.1em 0.25em;
+    border-width:2px;
+    border-style:solid;
+    border-color:#AC5DA9;
+    border-left-color:transparent;
+    border-top-color:transparent;
+    position:absolute;
+    width:100%;
+    height:1em;
+    transform:rotate(-1deg);
+    opacity:0.5;
+    border-radius:50%;
+  }
+
+
+
+.title {
+   color: #AC5DA9;
+   font-size: 4rem;
+   font-weight: 600;
+   padding: 0.5rem 0;
+   font-family: 'dream avenue';
+}
+
+
+
+/* button */
+.button-container {
+    display: flex;
+    justify-content: left;
+    gap: 1.25rem;
+} 
+
+.button {
+    font-weight: 500;
+    padding: 0.25rem;
+    width: 8rem;
+    background-color: #6FA267;
+    color:white;
+    border: #6FA267 0.1rem solid;
+    border-radius: 2em;
+    transition: all 300ms ease;
+}
+
+.button-color:hover {
+    cursor: pointer;
+    background-color: white;
+    color: #6FA267;
+    border: #6FA267 0.1rem solid;
+    transition: all 300ms ease;
+}
+
+
+/* about section */
+.about-p {
+    font-size: 1rem;
+    padding: 1rem 0;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+/* experience section */
+.experience-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.experience-element {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 8px 8px 90px -31px rgba(66, 68, 90, 1);
+    padding: 1rem;
+
+}
+
+/* projects section */
+
+
+/* contact section */
+
+
+
+.contact-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    padding: 1rem;
+    margin: 2rem auto;
+    border: #6FA267 0.1rem solid;
+    border-radius: 10px;
+    width: 30vw;
+    height: 20vh;
+
+}
+
+#links-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 2rem;
+    margin: 1rem;
+  }
+
+.contact-button{
+    width: 10rem;
+    height: 3rem;
+}
+
+
+/* footer */
+footer {
+    text-align: center;
+    height:5vh;
+    color: grey;
 }
